# mvp-scaffold

./: .env.example  .gitignore  AGENTS.md  GITHUB.md  RAILWAY.md  README.md  USAGE.md  docker-compose.yml  pyproject.toml  skills-lock.json
.cursor/: environment.json  mcp.json
.cursor/skills/generate-frontend-sdk/: SKILL.md
.cursor/skills/persist-cloud-environment/: SKILL.md
.cursor/skills/spin-up-mvp-scaffold/: SKILL.md
backend/: Dockerfile  Dockerfile.dev  openapi.json  package-lock.json  package.json
backend/drizzle/: 0000_long_wraith.sql  0001_better_auth.sql
backend/drizzle/meta/: 0000_snapshot.json  0001_snapshot.json  _journal.json
backend/scripts/: emit-openapi.ts
backend/src/: app.ts  auth-email.e2e.test.ts  auth.ts  index.ts  openapi-config.ts  resend-basic-send.e2e.test.ts
backend/src/auth/: permissions.ts
backend/src/db/: auth-schema.ts  schema.ts
backend/src/lib/: email.ts  resend.ts
frontend/: Dockerfile  Dockerfile.dev  components.json  middleware.ts  next.config.js  package-lock.json  package.json  tsconfig.json
frontend/app/: layout.tsx  page.tsx
frontend/app/check-email/: page.tsx
frontend/app/dashboard/: layout.tsx  page.tsx
frontend/app/forgot-password/: page.tsx
frontend/lib/: auth-client.ts  auth-permissions.ts
frontend/providers/: theme-provider.tsx
frontend/styles/: globals.css  theme.css
one-click/: .env.example  README.md  docker-compose.yml
one-click/api/: Dockerfile.dev  drizzle.config.ts  package.json
one-click/web/: Dockerfile  package.json
scripts/railway/: setup_project.py
(+47 files in other folders)
