[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "mvp-scaffold-railway-setup"
version = "0.1.0"
description = "Post-template Railway project setup for mvp-scaffold forks"
requires-python = ">=3.11"
dependencies = ["httpx>=0.27"]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[project.scripts]
railway-setup = "railway_setup.cli:main"

[tool.setuptools.packages.find]
where = ["scripts/railway"]

[tool.pytest.ini_options]
testpaths = ["scripts/railway/tests"]
markers = [
    "integration: live Railway API tests (set RUN_RAILWAY_INTEGRATION=1)",
]
